<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <EditText
        android:id="@+id/credential_name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/credential_name_hint"
        android:inputType="textNoSuggestions"
        android:singleLine="true"
        />

    <EditText
        android:id="@+id/credential_value_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_margin"
        android:hint="@string/credential_value_hint"
        android:inputType="textPassword"
        android:singleLine="true"
        />

</LinearLayout>