<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/add_credential_item"
        android:title="@string/menu_item_add_credential"
        app:showAsAction="always"/>

    <item
        android:id="@+id/reset_vault_item"
        android:title="@string/menu_item_reset_vault"
        app:showAsAction="collapseActionView"/>
</menu>